objects/HealthCloudGA__EhrImmunization__c.object
<CustomObject>
    <description>Immunization event information.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Immunizations</relationshipLabel>
        <relationshipName>Immunizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DateAdministered__c</fullName>
        <label>Date Administered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseQuantityUnits__c</fullName>
        <label>Dose Quantity Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseQuantityValue__c</fullName>
        <label>Dose Quantity Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseQuantity__c</fullName>
        <label>Dose Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>Returns true if Refused Indicator = False AND Expiration Date &gt; Now()  else returns false</description>
        <formula>IF(  AND( HealthCloudGA__RefusedIndicator__c = false,  DATEVALUE(HealthCloudGA__ExpirationDate__c)  &gt; Today()), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns true if Refused Indicator = False AND Expiration Date &gt; Now()  else returns false</inlineHelpText>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationCity__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationCountry__c</fullName>
        <label>Location Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationId__c</fullName>
        <externalId>true</externalId>
        <label>Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationLine1__c</fullName>
        <label>Location Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationLine2__c</fullName>
        <label>Location Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationPostalCode__c</fullName>
        <label>Location Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationStartDate__c</fullName>
        <label>Location Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationState__c</fullName>
        <label>Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationTelecom__c</fullName>
        <label>Location Telecom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationText__c</fullName>
        <label>Location Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationType__c</fullName>
        <label>Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationUse__c</fullName>
        <label>Location Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LotNumber__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Immunizations</relationshipLabel>
        <relationshipName>Immunizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformerName255__c</fullName>
        <label>Performer Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PerformerName__c</fullName>
        <label>Performer Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performer</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Immunizations Performed</relationshipLabel>
        <relationshipName>ImmunizationsPerformed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonCode__c</fullName>
        <description>Reason Symbol in syntax defined by the system</description>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonLabel__c</fullName>
        <label>Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RefusalReasonCode__c</fullName>
        <description>Refusal Reason Symbol in syntax defined by the system</description>
        <label>Refusal Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RefusalReasonLabel__c</fullName>
        <label>Refusal Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RefusalReasonSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Refusal Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RefusedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was immunization refused?</description>
        <label>Refused Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RequesterName255__c</fullName>
        <label>Requester Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RequesterName__c</fullName>
        <label>Requester Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Immunizations Requested</relationshipLabel>
        <relationshipName>ImmunizationsRequested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteCode__c</fullName>
        <description>Route Symbol in syntax defined by the system</description>
        <label>Route Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteLabel__c</fullName>
        <label>Route Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RouteSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Route System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SelfReported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a self-reported record?</description>
        <label>Self Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteCode__c</fullName>
        <description>Site Symbol in syntax defined by the system</description>
        <label>Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteLabel__c</fullName>
        <label>Site Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SiteSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Site System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__VaccineTypeCode__c</fullName>
        <description>Vaccine Type Symbol in syntax defined by the system</description>
        <label>Vaccine Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__VaccineTypeLabel__c</fullName>
        <label>Vaccine Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__VaccineTypeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Vaccine Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Immunization</label>
    <nameField>
        <displayFormat>Immu-{0}</displayFormat>
        <label>EHR Immunization ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Immunizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>